syntax = "proto3";

package ru.leti.wise.task.plugin;

import "graph.proto";

enum PluginType {
  GRAPH = 0;
}

message Plugin {
  string id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  string fileName = 5;
  string beanName = 6;
  string authorId = 7;
  PluginType pluginType = 8;
  bool isInternal = 9;
}

message Solution {
  string pluginId = 1;
  PluginType pluginType = 2;
  oneof Payload {
    ru.leti.wise.task.graph.Graph graph = 3;
  }
  oneof AdditionalPayload {
    ru.leti.wise.task.graph.Graph otherGraph = 4;
    string handwrittenAnswer = 5;
  }
}